1998-11-09  John R. Jackson  <jrj@purdue.edu>

	* server-src/reporter.c (main): ignore SIGPIPE so if a child process
	dies we do not also go away.  Also fix a core dump if amanda.conf
	cannot be processed, and clean up a few error messages.

1998-11-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/infofile.h (struct info_s): add last_level and 
	consecutive_runs.
	* server-src/infofile.c: support new last_level and consecutive_runs
	* server-src/planner.c (last_level): return ip->last_level.
	* server-src/planner.c (runs_at): return ip->consecutive_runs.
	* server-src/driverio.c (update_info_dumper): update inf.last_level
	and inf.consecutive_runs.
	
1998-11-09  Mike Grupenhoff <kashmir@munge.com>

	* client-src/sendbackup-dump.c (start_backup): don't close indexf
	if it was never open
	* client-src/sendbackup-gnutar.c (start_backup): ditto

1998-11-08  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c (main): add hdp->disksize to total_disksize
	even when we create the datestamp dir. (reserve was unusable).

1998-11-07  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* Makefile.am (EXTRA_DIST): added EVENT-API, SECURITY-API and
	STRATEGY-API
	* docs/STRATEGY-API: new file

	* configure.in (GNUTAR): accept tar from Free paxutils, the new name
	of GNU tar

1998-11-07  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* changer-src/scsi-solaris.c: added missing #endif

	* configure.in: merge with camlib.h patch from Oct 31
	remove all uses of test ... -a ...; this is not portable.
	(AC_CHECK_HEADERS) added header files for Linux and Solaris

1998-11-07  Thomas Hepper  <th@icem.de>

	* changer-src/chg-scsi: Add config option scsidev
	* changer-src/chg-scsi: Remove function tape_ready
	* changer-src/chg-scsi: Add new parameter tapedev to function
	ask_clean
	* changer_src/scsi-hpux.c: changed HAVE_HPUX_SCSI to 
	HAVE_HPUX_SCSI_CHIO, changed in configure.in too
	* changer-src/libscsi.h: Expand definition for get_clean_state